<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.dev4u.hv.my_diagnostic.Fragments.HistoryDetailFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="5dp"
        android:focusableInTouchMode="false"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:tint="@color/gray"
                    android:src="@drawable/ic_history"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
                <TextView
                    android:textSize="20sp"
                    android:text="@string/medical_records"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblDateHistory"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="7dp"
                android:textSize="18sp"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:maxLength="100"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/txtTitleHistory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="textCapSentences|textMultiLine"
                    android:gravity="top"
                    android:minLines="4"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/txtDescriptionHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/decription" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/lblStateDiseaseHistory"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="7dp"
                android:textSize="18sp"
                android:text="@string/disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="16sp"
                android:layout_marginLeft="7dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/personalized_tag"
                android:textColor="@color/white"
                android:id="@+id/lblNameDiseaseHistory"
                android:gravity="left"
                android:layout_weight="1"
                android:text="Carpal Tunnel Syndrome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingBottom="1dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSaveHistory"
        android:src="@drawable/ic_check_24dp"
        android:tint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp" />

</android.support.design.widget.CoordinatorLayout>
